@@ -1,7 +1,8 @@
-# Copyright 1999-2008 Gentoo Foundation
+# Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/games-puzzle/xye/Attic/xye-0.8.0.ebuild,v 1.5 2008/06/23 07:24:58 opfer Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-puzzle/xye/Attic/xye-0.8.0.ebuild,v 1.6 2009/01/09 20:15:10 mr_bones_ Exp $
 
+EAPI=2
 inherit eutils games
 
 DESCRIPTION="Free version of the classic game Kye"
@@ -15,20 +16,9 @@ IUSE=""
 
 DEPEND="media-libs/libsdl
 	media-libs/sdl-ttf
-	media-libs/sdl-image"
+	media-libs/sdl-image[png]"
 
-pkg_setup() {
-	if ! built_with_use media-libs/sdl-image png ; then
-		eerror "You need the png useflag enabled on media-libs/sdl-image."
-		eerror "Please emerge media-libs/sdl-image with USE=\"png\""
-		die "Missing png useflag."
-	fi
-	games_pkg_setup
-}
-
-src_unpack() {
-	unpack ${A}
-	cd "${S}"
+src_prepare() {
 	epatch "${FILESDIR}"/${P}-gcc43.patch
 	sed -i '/^xye_LDFLAGS/d' Makefile.in || die "sed failed"
 }
