@@ -1,6 +1,9 @@
 # ChangeLog for games-puzzle/xye
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-puzzle/xye/ChangeLog,v 1.9 2008/06/23 07:24:58 opfer Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/games-puzzle/xye/ChangeLog,v 1.10 2009/01/09 20:15:10 mr_bones_ Exp $
+
+  09 Jan 2009; Michael Sterrett <mr_bones_@gentoo.org> xye-0.8.0.ebuild:
+  EAPI=2; add use-based dep for media-libs/sdl-image
 
   23 Jun 2008; Christian Faulhammer <opfer@gentoo.org> xye-0.8.0.ebuild:
   stable x86, bug 228963
